<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kisusyenni.storyapp.view.main.home.HomeFragment"
        android:label="@string/story"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.kisusyenni.storyapp.view.main.maps.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kisusyenni.storyapp.view.main.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>